--- a/星海移动/css/index.css
+++ b/星海移动/css/index.css
@@ -9,7 +9,7 @@ ul{
 	list-style: none;
 }
 /*头*/
-.head{
+/*.head{
 	width: 2.6rem;
 	height: 1rem;
 	background: rgba(0,0,0,0);
@@ -31,7 +31,7 @@ ul{
 .head h3{
 	font-size: 0.4rem;
 	line-height: 0.4rem;
-}
+}*/
 
 /*banner*/
 .banner{
@@ -49,7 +49,7 @@ ul{
 /*nav*/
 .nav{
 	width: 7.5rem;
-	height: 2rem;
+	overflow: hidden;
 }
 .nav div{
 	float: left;
@@ -58,35 +58,40 @@ ul{
 }
 .nav img{
 	display: block;
-	width: 1rem;
-	height: 1rem;
-	margin: 0.25rem;
+	width: 1.1rem;
+	height: 1.1rem;
+	margin: 0.2rem;
 	margin-bottom: 0.05rem;
 }
 .nav span{
-	font-size: 0.2rem;
+	font-size: 0.1rem;
+	display: block;
 }
 /*announcement*/
 .content_new_cen{
 	width: 100%;
 	text-align: center;
+	margin-top: 0.2rem;
 }
 .content_new_cen h2,.content_new_cen span{
 	color: black;
 }
 .content_new_cen h2{
-	font-size: 0.45rem;
+	font-size: 0.4rem;
+	line-height: 0.3rem;
 }
 .content_new_cen span{
-	font-size: 0.2rem;
+	font-size: 0.1rem;
+	letter-spacing: normal;
+	line-height: 0.5rem;
+	display: block;
 }
 
 .content_new_cen span:last-child{
 	display: block;
-	border-bottom: 3px solid black;
+	border-bottom: 2px solid #535353;
 	width: 1rem;
 	margin: 0 auto;
-	margin-top: 5px;
 }
 .announcement{
 	margin-top: 0.2rem;
@@ -94,11 +99,11 @@ ul{
 }
 .announcement div{
 	float: left;
-	width: 2.04rem;
-	margin-left:0.3rem ;
+	width: 2rem;
+	margin-left:0.2rem ;
 }
 .announcement div:first-child{
-	margin-left:0.39rem;
+	margin-left:0.5rem;
 }
 .announcement img{
 	width: 100%;
@@ -106,10 +111,10 @@ ul{
 	float: left;
 }
 .announcement p{
-	font-size: 0.2rem;
+	font-size: 0.1rem;
 	color: #FFFFFF;
 	display: block;
-	width:1.84rem;
+	width:1.8rem;
 	text-overflow: ellipsis;
 	display: -webkit-box;
 	-webkit-line-clamp: 6;
@@ -118,7 +123,43 @@ ul{
 	background: #cc1e30;
 	padding:0 0.1rem;
 	padding-top:0.2rem;	
-	
+}
+.anno_1 .anno_top{
+	background: #CC1E30;
+	width: 100%;
+	height: 0.2rem;
+	float: left;
+	margin-left: 0;
+}
+/*about*/
+.about{
+	border-top:2px solid #e3e3e3;
+	border-bottom: 2px solid #e3e3e3;
+	text-align: center;
+	margin-top:0.2rem;
+}
+.about h3{
+	font-size: 0.4rem;
+	font-weight: normal;
+	margin-top: 0.2rem;
+}
+.about span:first-of-type{
+	width:2rem;
+	display: block;
+	border-top:2px solid black;
+	margin-left: 2.75rem;
+	margin-bottom: 0.2rem;
+}
+.about span:last-child{
+	width: 1.5rem;
+	color: red;
+	font-size: 0.1rem;
+	border: none;
+}
+.about p{
+	font-size: 0.1rem;
+	padding: 0 0.35rem ;
+	text-align: left;
 }
 /*teacher*/
 .teacher{
