--- a/星海移动/css/index.css
+++ b/星海移动/css/index.css
@@ -214,3 +214,130 @@ ul{
 	color: #FFFFFF;
 	padding-top:0.1rem;
 }
+.teachers_show{
+	float: left;
+	width: 1.475rem;
+	margin: 0.2rem 0.2rem;
+	
+}
+.teachers_show img{
+	width: 1.475rem;
+	height: 1.475rem;
+	border-radius: 50%;
+	border: 1px solid red;
+}
+/*报考流程*/
+.order{
+	background: url(../images/order.jpg);
+	background-position: center;
+	background-size: cover;
+	width: 7.5rem;
+	height: 0.78rem;
+	clear: both;
+	text-align: center;
+	margin-top:0.5rem;
+}
+.order_show{
+	background: url(../images/order_show.jpg);
+	background-position: center;
+	background-size: cover;
+	width: 7.5rem;
+	height: 3.7rem;
+	clear: both;
+	text-align: center;
+}
+.order_show div{
+	width: 0.9rem;
+	height: 0.5rem;
+	margin-top:1.2rem;
+	margin-left: 3.6rem;
+	float: left;
+}
+.school{
+	background: #cc1e30;
+	background-position: center;
+	background-size: cover;
+	width: 7.1rem;
+	height: 0.78rem;
+	clear: both;
+	text-align: center;
+	padding: 0 0.2rem;
+	margin-bottom: 0.2rem;
+}
+.school img{
+	float: left;
+	width: 7.1rem;
+	height: 0.78rem;
+}
+.school_show{
+	overflow: hidden;
+	clear: both;
+}
+.school_show div{
+	float: left;
+	margin-left: 0.2rem;
+	
+}
+.school_pic{
+	width: 3.35rem;
+	height: 1.75rem;
+}
+.school_pic img{
+	float: left;
+	width: 3.35rem;
+	height: 1.75rem;
+}
+.school_show .school_pic:last-child{
+	margin-top: 0.2rem;
+}
+.school_show .school_pic:last-child img{
+	float: left;
+	width: 3.35rem;
+	height: 1.75rem;
+}
+.school_video{
+	width: 3.55rem;
+	height: 3.7rem;
+}
+
+/*通知*/
+.inform{
+	text-align: left;
+	width: 7.1rem;
+	margin: 0.2rem 0.2rem;
+	overflow: hidden;
+	clear: both;
+}
+.inform h3{
+	font-size: 0.3rem;
+}
+.inform p{
+	font-size: 0.1rem;
+	margin: 0.1rem 0;
+	letter-spacing: 1.5px;
+}
+.inform p:last-child{
+	color: red;
+}
+.apply div,.apply input{
+	width: 3rem;
+	height: 1rem;
+	line-height: 1rem;
+	display: block;
+	float: left;
+	border:none;
+	margin: 0;
+	padding: 0;
+}
+.apply div{
+	border-top:1px solid red;
+	border-left:1px solid red;
+	border-bottom:1px solid red;
+	border-radius: 4px 0 0 4px;
+}
+.apply input{
+	border-top:1px solid red;
+	border-bottom:1px solid red;
+	border-right:1px solid red;
+	border-radius: 0 4px 4px 0;
+}
